--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
 
     <div class="top-container">
-        <img src="images/Cloud image 1.png" alt="cloud-img" class="top-cloud" height="300px">
+        <img src="Cloud image 1.png" alt="cloud-img" class="top-cloud" height="300px">
         <h1>I'm Deepak</h1>
         <h2>a <span class="web">web</span> developer</h2>
-        <img src="images/Cloud image 1.png" alt="cloud-img" class="bottom-cloud" height="250px">
-        <img src="images/the sun.png" alt="The-Sun-img" class="sun" height="200px">
-        <img src="images/mountain image.png" alt="mountain-img" class="mountain">
+        <img src="Cloud image 1.png" alt="cloud-img" class="bottom-cloud" height="250px">
+        <img src="the sun.png" alt="The-Sun-img" class="sun" height="200px">
+        <img src="mountain image.png" alt="mountain-img" class="mountain">
     </div>
 
     <div class="middle-container">
         <div class="profile">
-          <img class="profile-image" src="images/Deepak Profile Picture.png" alt="Deepak-Rode-Profile-image">
+          <img class="profile-image" src="Deepak Profile Picture.png" alt="Deepak-Rode-Profile-image">
           <h2>Hi.</h2>
           <p class="intro">I'm Deepak, a Web Developer based in Mumbai, India. I have a passion for Web Development and love to create interactive websites.</p>
         </div>
@@ -32,12 +32,12 @@
         <div class="skills">
           <h2>What I can do?</h2>
           <div class="skill-row">
-            <img class="design" src="images/web design.png" alt="Web-Designing-image">
+            <img class="design" src="web design.png" alt="Web-Designing-image">
             <h3>Design What You Want.</h3>
             <p>I like to keep it simple.<br> My goals are to focus on typography, content and conveying the message that you want to send.</p>
           </div>
           <div class="skill-row">
-            <img class="develop" src="images/web development image.png" alt="Web-Develoopment-image">
+            <img class="develop" src="web development image.png" alt="Web-Develoopment-image">
             <h3>Develop What You Need.</h3>
             <p>I'm a developer,<br> so I know how to create your website to run across devices using the latest technologies available.</p>
           </div>
